add sidebar links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,38 @@
         </div>
       </header>
       <div class="main row">
-        <div class="small-12 columns">
+        <div class="small-3 columns">
+          <ul class="side-nav">
+            <li><h5><strong>COBRE</strong></h5></li>
+            <li><h6>LSU</h6></li>
+            <li><a href="http://cobre.lsu.edu/">Center for Experimental Infectious Disease Research</a></li>
+            <li><a href="http://cobre.pbrc.edu/default.html">Mentoring Obesity and Diabetes Research in Louisiana</a></li>
+
+            <li><h6>LSUHSC</h6></li>
+            <li><a href="http://www.lsuhscmicrobiology.com/cmtv-overview.htm">Center for Molecular and Tumor Virology</a></li>
+            <li><a href="http://www.medschool.lsuhsc.edu/cardio_center/cobre/default.aspx">Mentoring in Cardiovascular Biology</a></li>
+            <li><a href="http://www.medschool.lsuhsc.edu/neuroscience/">Mentoring Neuroscience in Louisiana</a></li>
+            <li><a href="http://www.medschool.lsuhsc.edu/cancer_center/cobre.aspx/">Mentoring Translational Researchers in Louisiana</a></li>
+
+            <li><h6>TULANE</h6></li>
+            <li><a href="http://tulane.edu/som/cancer/cancercobremission.cfm">Mentoring a Cancer Genetics Program</a></li>
+            <li><a href="http://tulane.edu/som/thrce/">Tulane Hypertension and Renal Center of Excellence</a></li>
+
+            <li><h5><strong>INBRE</strong></h5></li>
+
+            <li><h6><a href="http://lbrn.lsu.edu" style="color: black">Louisiana Biomedical Research Network</a></h6></li>
+            <li><a href="http://www.lsu.edu/">LSU</a></li>
+            <li><a href="http://www.lsus.edu/">LSU Shreveport</a></li>
+            <li><a href="http://www.lsuhsc.edu/">LSUHSC New Orleans</a></li>
+            <li><a href="http://www.sh.lsuhsc.edu/">LSUHSC Shreveport</a></li>
+            <li><a href="http://www.latech.edu/">Louisiana Tech University</a></li>
+            <li><a href="http://www.subr.edu/">Southern University</a></li>
+            <li><a href="http://www.tulane.edu/">Tulane University</a></li>
+            <li><a href="http://www.ulm.edu/">University Louisiana at Monroe</a></li>
+            <li><a href="http://www.xula.edu/">Xavier University</a></li>
+          </ul>
+        </div>
+        <div class="small-9 columns">
           {{ content }}
         </div>
       </div>
