simplify page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <body>
       <header class="row">
         <div class="small-12 columns">
-          <img src="banner.png">
+          <img src="../banner.png">
           <h1>Louisiana IDeA Network</h1>
         </div>
       </header>
